changed all html files to template version

--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -1,8 +1,7 @@
 {% load static %}
-<link rel="stylesheet" type="text/css"
-    href="{% static 'css/nav.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}" />
 <nav>
-    <div id = "logo"><b>CODE PIRATES</b></div>
+    <div id="logo"><b>CODE PIRATES</b></div>
     <ul class="tab-container">
         <li class="tab">
             <a href="#">Home</a>
@@ -17,5 +16,6 @@
             <a href="#">Contact</a>
         </li>
     </ul>
+    <!-- todo:cahnge this hardcoded url to general  -->
     <img src="{% static 'images/profile_pic/WIN_20191002_20_23_08_Pro_226X4hY.jpg/' %}" alt="user icon">
 </nav>
