--- a/templates/communities/post/post_create_form.html
+++ b/templates/communities/post/post_create_form.html
@@ -17,3 +17,12 @@
 </body>
 
 </html>
+{% extends 'base/base.html' %}
+{% load static %}
+{% block body %}
+<form action="" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{form.as_p}}
+    <button>post</button>
+</form>
+{% endblock %}
