added ui to communities section

--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -6,7 +6,9 @@
     </div>
     <div class="nav-tab-container">
         <div class="nav-tab">
-            COMMUNITY
+            <a href="{%url 'community:all' 'all' %}" style="display: block; text-transform: uppercase;">
+                community
+            </a>
         </div>
         <div class="nav-tab">
             CONTACT US
