--- a/templates/communities/community/community_check_delete.html
+++ b/templates/communities/community/community_check_delete.html
@@ -1,9 +1,12 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block body %}
-<form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    <button type="submit">confirm delete</button>
-    <a href="{%url 'community:detail' object.slug %}">cancel</a>
+<form method="post" class=" max-w-xl mx-auto text-center px-4 py-2">{% csrf_token %}
+    <p class="text-2xl mb-20">Are you sure you want to delete <br> "{{ object }} community"?</p>
+    <button type="submit"
+        class=" w-full my-4 block text-red-500 px-4 py-2 text-lg rounded-md  hover:bg-red-500 hover:text-white border border-red-500">confirm
+        delete</button>
+    <a href=" {%url 'community:detail' object.slug %}"
+        class="block text-blue-500 px-4 py-2 text-lg rounded-md hover:bg-blue-500 hover:text-white border border-blue-500">cancel</a>
 </form>
 {% endblock %}
