--- a/templates/communities/community/community_create_form.html
+++ b/templates/communities/community/community_create_form.html
@@ -2,9 +2,12 @@
 {% load static %}
 {% block body %}
 {% load crispy_forms_tags %}
-<form action="" method="post" enctype="multipart/form-data">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<p class="display-4 text-center text-capitalize my-2">create new community</p>
+<form action="" method="post" enctype="multipart/form-data" class="col-md-6 mx-auto">
     {% csrf_token %}
     {{form|crispy}}
-    <button type="submit" class="btn btn-primary">create new communitys</button>
+    <button type="submit" class="btn btn-primary btn-block">create new communitys</button>
 </form>
 {% endblock %}
