added themes to communities

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    .theme0 {
+        background-color: #fff;
+
+
+    }
+
+    .theme1 {
+        background-color: #FFE53B;
+        background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+
+    }
+
+    .theme2 {
+        background-color: #21D4FD;
+        background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+
+    }
+
+    .theme3 {
+        background-color: #08AEEA;
+        background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+
+    }
+
+    .theme4 {
+        background-color: #FEE140;
+        background-image: linear-gradient(90deg, #FEE140 0%, #FA709A 100%);
+
+    }
+
+    /* 
+    to add any new theme you have to do following changes:
+    1.change total in view.py file of communities
+    2.add theme here in form of class
+    3.create a button on coummunity_detail.html page
+     */
+</style>
 
 <head>
     <meta charset="UTF-8">
