added redirect unauth user to correct page after authentication

--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -6,7 +6,7 @@
     </div>
     <div class="nav-tab-container">
         <div class="nav-tab">
-            <a href="{%url 'community:all' 'all' %}" style="display: block; text-transform: uppercase;">
+            <a href="{%url 'community:all' 'followed' %}" style="display: block; text-transform: uppercase;">
                 community
             </a>
         </div>
