--- a/templates/communities/community/community_detail.html
+++ b/templates/communities/community/community_detail.html
@@ -70,12 +70,14 @@
     </div>
     {%endif%}
     <!-- <button type="button" onclick="myFunction()">Set background color</button> -->
-    {% if posts.count %}
-    {% for post in posts %}
+    <div class=" px-10 py-10 ">
+        {% if posts.count %}
+        {% for post in posts %}
 
-    <div class=" px-10 py-10">
+
+        <!-- card start here -->
         <div
-            class="text-center max-w-xl mx-auto rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
+            class="text-center mb-32 max-w-xl mx-auto rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
             <!-- card header -->
             <div class="flex flex-col sm:flex-row justify-between sm:items-center items-start">
                 <h2 class="mt-2 text-xl flex items-center">
@@ -104,15 +106,12 @@
 
         </div>
 
+        {% endfor %}
+
+        {% else %}
+        <p>no post available</p>
+        {%endif%}
     </div>
-
-
-
-
-    {% endfor %}
-    {% else %}
-    <p>no post available</p>
-    {%endif%}
 
 </div>
 <script>
