--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -3,15 +3,35 @@
 
 {% block body %}
 <!-- STYLESHEET FOR THE PAGE -->
-<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />
 
-<div class="container">
-    <div class="main-form">
-        <div class="grid-container">
-            <div class="grid-items login-form">
-                <div style="width: 100%; text-align: center;">
-                    <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="user-img">
-                    <h3 style="font-size:1.5rem; width: 100%;">Account Login</h3>
+<style>
+    a{
+      text-decoration: none;
+    }
+    .form-elem label{
+        position: relative;
+        top: -1.8em;
+        color: #888;
+    }
+    label{
+        transition: 0.2s all ease-in-out;
+    }
+    body,html{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../static/images/login_bg.jpg');
+    background-size: cover;
+    background-position: center;
+}
+</style>
+
+<div class="w-full h-screen flex items-center justify-center">
+    <div class="bg-white w-10/12 sm:w-3/5 md:w-1/2 xl:w-3/5 lg:w-3/4 flex" style="border-bottom-right-radius: 1.5rem; border-top-left-radius: 1.5rem;">
+        <div class="w-full xl:w-1/3 lg:w-1/3 flex justify-center items-center flex-col mx-0">
+                <div class="flex justify-center items-center flex-col">
+                    <img src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png" class="my-4">
+                    <h1 class="font-semibold text-2xl my-4">Account Login</h1>
                 </div>
                 {% for message in messages %}
 
@@ -22,29 +42,41 @@
 
                 </p>
                 {% endfor %}
-                <form action="" method="POST">
+                <form action="" method="POST" class="my-8 w-4/5">
                     {%csrf_token%}
-                    <div class="form-elem">
-                        <input type="text" required name="username" class="field">
-                        <label>Username</label>
+                    <div class="form-elem my-3">
+                        <input type="email" required name="username" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(0)" onblur="returnBack(0)"><br>
+                        <label id="anima">Username</label>
                     </div>
-                    <div class="form-elem">
-                        <input type="password" required name="password" class="field">
-                        <label>Password</label>
-                        <img src="https://img.icons8.com/pastel-glyph/64/000000/lock.png" class="lock-icon">
-                        <a href="#"
-                            style="text-decoration: none; color: #666; font-size: 0.7rem; float: right; position: relative;top: -1em; left: 1.9em;">Forget
-                            Password?</a>
+                    <div class="form-elem my-3">
+                        <input type="password" required name="username" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(1)" onblur="returnBack(1)"><br>
+                        <label id="anima">Password</label>
                     </div>
-                    <button class="login-btn">Login</button>
-                    <p style="font-size: 1rem;color: #999;">New User? <span><a href="/signup"
-                                style="color: #004C80;font-weight: 600;">SignUp</a></span> here!!</p>
+                    <button class="px-4 py-2 text-blue-500 mx-auto border-2 border-blue-500 w-full rounded-full hover:bg-blue-500 hover:text-white font-semibold my-4">Login</button>
+                <p class="text-center text-gray-500 font-semibold text-lg">New User? <span><a href="#" class="text-blue-900">SignUp</a></span> Here!!</p>
                 </form>
             </div>
-            <div class="grid-items grid-img"><img src="{% static 'images/login_side.jpg' %}"
-                    style="width: 100%; height: 100%; border-bottom-right-radius: 2rem;"></div>
-        </div>
+            <div class="w-0 xl:w-2/3 lg:w-2/3">
+                <img src="{% static 'images/login_side.jpg' %}" class="w-full h-full hidden xl:block lg:block" style="border-bottom-right-radius: 1.5rem;">
+            </div>
     </div>
 </div>
+<script>
+    function niceAnims(index){
+        document.querySelectorAll('#anima')[index].style.top= '-4em' 
+        document.querySelectorAll('#anima')[index].style.color='#000' 
+        document.querySelectorAll('#anima')[index].style.fontSize='0.8rem'
+    }
+    function returnBack(index){
+        el = document.querySelectorAll('#fieldVal')[index]
+        if(el !==null && el.value !==""){
+        niceAnims(index)
+        }else{
+        document.querySelectorAll('#anima')[index].style.top= '-1.8em' 
+        document.querySelectorAll('#anima')[index].style.color='#888' 
+        document.querySelectorAll('#anima')[index].style.fontSize='1rem'
+        }
+    }
+</script>
 
 {% endblock %}
