--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block body %}
-<!-- STYLESHEET FOR THE PAGE -->
 
 <style>
     a{
@@ -15,6 +14,9 @@
     }
     label{
         transition: 0.2s all ease-in-out;
+    }
+    button{
+        transition: 0.25s all ease-in-out;
     }
     body,html{
     margin: 0;
@@ -45,15 +47,15 @@
                 <form action="" method="POST" class="my-8 w-4/5">
                     {%csrf_token%}
                     <div class="form-elem my-3">
-                        <input type="email" required name="username" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(0)" onblur="returnBack(0)"><br>
-                        <label id="anima">Username</label>
+                        <input type="text" required name="username" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(0)" onblur="returnBack(0)"><br>
+                        <label id="anima" onclick="niceAnims(0)">Username</label>
                     </div>
                     <div class="form-elem my-3">
-                        <input type="password" required name="username" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(1)" onblur="returnBack(1)"><br>
-                        <label id="anima">Password</label>
+                        <input type="password" required name="password" class="border-b-2 border-gray-500 px-2 py-1 text-lg w-full focus:outline-none" id="fieldVal" onfocus="niceAnims(1)" onblur="returnBack(1)"><br>
+                        <label id="anima" onclick="niceAnims(1)">Password</label>
                     </div>
                     <button class="px-4 py-2 text-blue-500 mx-auto border-2 border-blue-500 w-full rounded-full hover:bg-blue-500 hover:text-white font-semibold my-4">Login</button>
-                <p class="text-center text-gray-500 font-semibold text-lg">New User? <span><a href="#" class="text-blue-900">SignUp</a></span> Here!!</p>
+                <p class="text-center text-gray-500 font-semibold text-lg">New User? <span><a href="/signup" class="text-blue-900">SignUp</a></span> Here!!</p>
                 </form>
             </div>
             <div class="w-0 xl:w-2/3 lg:w-2/3">
@@ -66,6 +68,7 @@
         document.querySelectorAll('#anima')[index].style.top= '-4em' 
         document.querySelectorAll('#anima')[index].style.color='#000' 
         document.querySelectorAll('#anima')[index].style.fontSize='0.8rem'
+        document.querySelectorAll('#fieldVal')[index].focus()
     }
     function returnBack(index){
         el = document.querySelectorAll('#fieldVal')[index]
