mess module debugging

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -44,25 +44,15 @@
             </p>
         </div>
 
-        <div class="content" id="mess_schedule">
-            <h1 id="mess_period">
-                BREAKFAST
-            </h1>
-            <P id="menu">
-                aalo parantha + aachar + coffee
-            </P>
-            <br>
-            <p>
-                Would you be having breakfast today?
-            </p>
-            <br>
-            <div class="choice-container">
-                <a href="" class="is-eating-choice">YES</a>
-                <br>
-                <a href="" class="is-eating-choice">NO</a>
-            </div>
-        </div>
 
+
+
+                    <!-- App for meals -->
+                    {% include 'mess/mess.html' %}
+
+
+
+                    
         <div class="content timetable-container">
             <div class="subject">
                 <div class="subject-properties" id="class-time">9AM - 10AM</div>
