--- a/mess/templates/mess/mess.html
+++ b/mess/templates/mess/mess.html
@@ -1,10 +1,12 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/mess.css' %}" />
 <div class="content" id="mess_schedule">
+
     <h1 id="mess_period">
         {{ meal|upper }}
         <a href=""></a>
     </h1>
+
     <br>
     {% if is_meal_voted %}
             
@@ -16,7 +18,7 @@
             {% else %}
                 <h1>Thanks for saving food</h1>
                 <br>
-                <h3>{{ current_meal|title }}</h3>
+                <h3>Not eating -- {{ current_meal|title }}</h3>
                 <a href="http://127.0.0.1:8000/mess/yes/" class="is-eating-choice">CHANGE</a>
             {% endif %}
 
