--- a/style-landing.css
+++ b/style-landing.css
@@ -1,5 +1,6 @@
 :root{
     --main-color:#3BB2B8;
+    --secondary-color: #312afc;
 }
 #checkout-btn{
     padding: 0.7em 1.4em;
@@ -7,8 +8,8 @@
     transition: all 0.3s ease-in-out;
     margin: 0.1em;
 }
-body{
-    
+button:focus{
+    outline: 0;
 }
 #checkout-btn:hover{
     padding: 0.8em 1.6em;
@@ -61,7 +62,13 @@ body{
         left: 0;
         margin-right: auto;
         margin-left: auto;
-        padding-right: 6em;
+        padding-right: 7em;
+        padding-left: 7em;
+        content: "Classes Today";
+    }
+    .content-event:hover{
+        font-size: 1.1rem;
+        padding: 0;
     }
     #floating-elem{
         height: 50vh;
@@ -83,7 +90,36 @@ body{
         left: -3.6em;
     }
   }
+  @media only screen and (max-width: 480px) {
+    #mess-sec{
+        font-size: 5px;
+    }
+  }
 #timeline-pos{
     margin-top: 8em;
     margin-bottom: 4em;
+}
+#mess-sec{
+    color: var(--secondary-color);
+    box-shadow: 1px 1px 10px #3BB2B8;
+    padding-left: 6em;
+}
+#mess-sec button{
+    border: 0.1rem solid var(--secondary-color);
+    transition: all 0.3s ease-in-out;
+} 
+#mess-sec button:hover{
+    background: var(--secondary-color);
+    color: #fff;
+}
+#choice{
+    border-bottom: 1px solid var(--secondary-color);
+    width: 92%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    transition: all 0.2s ease-in-out;
+}
+#choice h1:hover{
+    color: #fff;
 }
