working on official community - community is still not updated in user following list

--- a/templates/communities/community/community_create_form.html
+++ b/templates/communities/community/community_create_form.html
@@ -12,7 +12,7 @@
     <div class="text-center mb-4">
 
         <br>
-        <div onclick="setTheme(0,this)" class="theme0 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
+        <div onclick="setTheme(0,this)" class="theme0 inline-block p-4 xs:p-6 md:p-8 theme-btn border"></div>
         <div onclick="setTheme(1,this)" class="theme1 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
         <div onclick="setTheme(2,this)" class="theme2 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
         <div onclick="setTheme(3,this)" class="theme3 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
