--- a/templates/communities/community/community_list.html
+++ b/templates/communities/community/community_list.html
@@ -42,7 +42,7 @@
             members:{{community.followed_by.count}}
         </p>
         <!-- follow/unfollow buttons -->
-        {% if community.name != 'notice'%}
+        {% if not community.isofficial%}
         {% if request.user in community.followed_by.all%}
         <a href="{%url 'community:leave' community.slug %}"
             class="float-right bg-white text-blue-500 px-4 py-2 text-lg rounded-md font-bold hover:bg-blue-500 hover:text-white border border-blue-500">&times;
