--- a/templates/user/eCard.html
+++ b/templates/user/eCard.html
@@ -50,7 +50,7 @@
             redirect: 'follow'
         };
         // todo change this hardcoded regno to dynamic
-        fetch("http://localhost:8000/api/tick-status/20198043/", requestOptions)
+        fetch("http://localhost:8000/api/tick-status/{{regno}}/", requestOptions)
             .then(response => response.text())
             .then(result => {
                 var myObj = JSON.parse(result);
